feat(all): completely rewritten